--- a/week-1/style.css
+++ b/week-1/style.css
@@ -4,8 +4,6 @@ html, body{
     overflow-y: auto;
 }
 body {
-    display: flex;
-    flex-direction: column;
     margin: 0;
 }
 .navbar{
@@ -57,7 +55,7 @@ body {
     flex-direction: column; 
     align-items: center; 
     padding: 20px;
-    flex-wrap: wrap; 允许子元素换行
+    flex-wrap: wrap; 
     justify-content: center; 
     align-items: center; 
     position: relative;
@@ -82,19 +80,19 @@ body {
 
 .box {
     display: flex;
-    justify-content: center; /* 水平居中 */
-    background-color: #8798a9; /* 背景色 */
+    justify-content: center; 
+    background-color: #8798a9; 
     border: none; 
-    padding: 20px; /* 内边距 */
-    font-size: 16px; /* 字体大小 */
-    margin: 10px; /* Box之间的间距 */
+    padding: 20px; 
+    font-size: 16px; 
+    margin: 10px; 
     height: 15vh;
 }
 .btn{
-    justify-content: center; /* 水平居中 */
-    background-color: #dcedfd; /* 背景色 */
+    justify-content: center; 
+    background-color: #dcedfd; 
     border: none; 
-    padding: 10px; /* 内边距 */
+    padding: 10px; 
     margin-top: 50px;
     text-align: center;
 }
@@ -106,15 +104,7 @@ body {
 }
 @media (max-width: 799px) {
     .menu {
-        display: block; 
-        text-decoration: none; 
-        padding: 10px 0; 
-        color: #000;
         display: none;
-        margin: 10px;
-    }
-    .menu a{
-        justify-content: center; 
     }
     .menu li{
         margin-right: 0px;
