--- a/week-2/assignment-4/assignment-4.css
+++ b/week-2/assignment-4/assignment-4.css
@@ -99,7 +99,7 @@ body {
     margin: 10px; 
     height: 15vh;
 }
-.btn{
+.btn {
     justify-content: center; 
     background-color: #dcedfd; 
     border: none; 
@@ -110,6 +110,9 @@ body {
 
 @media (min-width: 800px) and (max-width: 1199px) {
     .grid-container {
+        width: 100%;
+    }
+    .hidden-box {
         width: 100%;
     }
 }
@@ -126,7 +129,7 @@ body {
     .menu {
         display: none;
     }
-    .menu li{
+    .menu li {
         margin-right: 0px;
         padding: 10px;
     }
@@ -162,7 +165,7 @@ body {
         margin-bottom: 20px; 
         text-align: left; 
     }
-    .mobile-list a{
+    .mobile-list a {
         text-decoration: none;
         color: black;
     }
@@ -200,7 +203,14 @@ body {
         align-items: center; 
         width: 100%;
     }
-    .box{
+    .hidden-box {
+        margin-top: 40px;
+        display: none;
+        flex-direction: column; 
+        align-items: center; 
+        width: 100%;
+    }
+    .box {
         background-color: #8798a9;
         border: none;
         padding: 20px;
