--- a/week-3/public/style.css
+++ b/week-3/public/style.css
@@ -27,7 +27,7 @@ label {
     margin-bottom: 20px;
 }
 
-input[type="number"] {
+input {
     padding: 8px;
     margin-bottom: 20px;
     width: 100%;
